@@ -1,44 +1,23 @@
-# Fossify Messages
+# Fossify Messages with OTP and transaction detection
 <img alt="Logo" src="graphics/icon.webp" width="120" />
 
-<a href='https://play.google.com/store/apps/details?id=org.fossify.messages'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' height=80/></a> <a href="https://f-droid.org/packages/org.fossify.messages/"><img src="https://fdroid.gitlab.io/artwork/badge/get-it-on-en.svg" alt="Get it on F-Droid" height=80/></a> <a href="https://apt.izzysoft.de/fdroid/index/apk/org.fossify.messages"><img src="https://gitlab.com/IzzyOnDroid/repo/-/raw/master/assets/IzzyOnDroid.png" alt="Get it on IzzyOnDroid" height=80/></a>
 
 Fossify Messages is your trusted messaging companion, designed to enhance your messaging experience in various ways.
-
-**📱 STAY CONNECTED WITH EASE:**  
-With Fossify Messages, you can effortlessly send SMS and MMS messages to stay connected with your loved ones. Enjoy SMS/MMS based group messaging and express yourself with photos, emojis, and quick greetings.
-
-**🚫 BLOCK UNWANTED MESSAGES:**  
-Take control of your messaging experience with a robust blocking feature, easily preventing unwanted messages, even from unknown contacts. You can also export and import blocked numbers for hassle-free backup. Additionally, customize your experience by preventing messages with specific words or phrases from reaching your inbox.
-
-**🔒 EFFORTLESS SMS BACKUP:**  
-Say goodbye to worries about losing important messages. Fossify Messages offers convenient SMS backup functionality by allowing you to export and import your messages. This feature ensures that you can easily switch devices without losing your valuable conversations.
-
-**🚀 LIGHTNING-FAST AND LIGHTWEIGHT:**  
-Despite its powerful features, Fossify Messages boasts a remarkably small app size, making it quick and easy to download and install. Experience speed and efficiency while enjoying the peace of mind that comes with SMS backup.
-
-**🔐 ENHANCED PRIVACY:**  
-Customize what appears on your lock screen for added privacy. Choose to display only the sender, message content, or nothing at all. Your messages are in your control.
-
-**🔍 EFFICIENT MESSAGE SEARCH:**  
-Say goodbye to endless scrolling through conversations. Fossify Messages simplifies message retrieval with a quick and efficient search feature. Find what you need, when you need it.
-
-**🌈 MODERN DESIGN & USER-FRIENDLY INTERFACE:**  
-Enjoy a clean, modern design with a user-friendly interface. The app features a material design and a dark theme option, providing a visually appealing and comfortable user experience.
-
-**🌐 OPEN-SOURCE TRANSPARENCY:**  
-Your privacy is a top priority. Fossify Messages operates without requiring an internet connection, guaranteeing message security and stability. Our app is completely free of ads and does not request unnecessary permissions. Moreover, it is fully open-source, providing you with peace of mind, as you have access to the source code for security and privacy audits.
-
-Make the switch to Fossify Messages and experience messaging the way it should be – private, efficient, and user-friendly. Download now and join our community committed to safeguarding your messaging experience.
-
-➡️ Explore more Fossify apps: https://www.fossify.org<br>
-➡️ Open-Source Code: https://www.github.com/FossifyOrg<br>
-➡️ Join the community on Reddit: https://www.reddit.com/r/Fossify<br>
-➡️ Connect on Telegram: https://t.me/Fossify
-
-<div align="center">
-<img alt="App image" src="fastlane/metadata/android/en-US/images/phoneScreenshots/1_en-US.png" width="30%">
-<img alt="App image" src="fastlane/metadata/android/en-US/images/phoneScreenshots/2_en-US.png" width="30%">
-<img alt="App image" src="fastlane/metadata/android/en-US/images/phoneScreenshots/3_en-US.png" width="30%">
-</div>
-
+**The above is the official fossify message links however in my fork the following changes**<br><br><br>
+**1. Build & Compatibility Fixes**<br>
+• **Resolved Build Error 25**: Added --enable-native-access, --add-opens, and -XX:+UseParallelGC to gradle.properties to ensure compatibility with Gradle 8.13 and JDK 21. This is personal preference<br>
+• **Robust APK Signing**: Updated app/build.gradle.kts to automatically detect signing credentials from your global ~/.gradle/gradle.properties using SIGNING_ snake_case naming conventions.<br>
+• **Warning Cleanup**: Fixed various deprecation warnings in Context.kt (Glide into calls) and resolved unresolved references during the build process.<br><br>
+**2. New Feature**s: OTP & Transaction Automation<br>
+• **OTP Detection**: Created OTPDetector.kt to identify verification codes. The app now automatically copies OTPs to the clipboard and plays a dedicated otp.mp3 sound.<br><br>
+**Smart Transaction Announcements**:<br>
+◦ Added TransactionDetector.kt to parse debit/credit alerts from major banks (Axis, HDFC, IDFC, Kotak, Federal, etc.).<br>
+◦ Implemented a Singleton TTSHelper to announce transactions out loud (e.g., "Paid 100 rupees to Amazon from HDFC bank").<br>
+◦ Conflict Prevention: Ensured that messages containing both OTPs and amounts are prioritized as OTPs to avoid redundant announcements.<br>
+• Dedicated Notification Channels: Created separate Android notification channels for OTP and Transactions to allow for independent customization and audio routing.<br><br>
+**3. App Functionality Enhancements**<br>
+• **Mark All as Read: **Fully implemented this missing feature by adding the necessary Room DAO queries, a Context extension, and a new menu option in the MainActivity toolbar.<br>
+• **Notification Actions:** Fixed the "Mark as read" button in the notification bar to correctly dismiss unique OTP and Transaction notifications by passing their specific hash IDs to the MarkAsReadReceiver. (Not in main source)<br><br>
+**4. Settings & UI Cleanup**<br>
+• **Unlocked Premium Features:** Removed the purchase requirement and "locked" labels for Blocked Numbers and Blocked Keywords settings.<br>
+• **Removed Monetization Prompts:** Completely hid the "Purchase Fossify Thank You" item from the General Settings to provide a cleaner, fully open-source experience.<br>
